# repo-secret-auditor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: quality.yml  reusable-security-scan.yml  security.yml
alembic/: env.py
alembic/versions/: 20260323_000001_initial_schema.py
docs/backlog/: issue-grooming.md
docs/demo/: demo-script.md
docs/reference/: api-reference.md  openapi.json
docs/release/: release-candidate.md
docs/roadmap/: github-issues-top10.md
docs/security/: security-owasp-checklist.md
docs/specification/: repo-secret-dependency-auditor.md
scripts/: run_security_scan.py
src/app/: __init__.py  main.py
src/app/api/: scans.py  schemas.py
src/app/ci/: __init__.py  scan_runner.py
src/app/db/: dependencies.py  models.py  session.py
src/app/reporting/: __init__.py  sarif.py
src/app/repositories/: scan_repository.py
src/app/scanner/: __init__.py  dependencies.py  scoring.py  secrets.py
src/app/security/: __init__.py  logging.py  rate_limiting.py  validation.py
src/app/workers/: queue.py
tests/fixtures/dependencies/: package-lock.sample.json  requirements_sample.txt
tests/fixtures/secrets/: negative_sample.txt  positive_sample.txt
tests/integration/: test_scan_flow.py
tests/smoke/: test_api_smoke.py
tests/unit/: test_api_security.py  test_bootstrap.py  test_database_models.py  test_dependency_auditor.py  test_sarif_exporter.py  test_scan_api.py  test_scan_runner.py  test_scan_scoring.py  test_secret_detector.py
