[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-secret-auditor"
version = "0.1.0"
description = "Repo Secret & Dependency Auditor backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "slowapi>=0.1.9,<2.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.17.0,<2.0.0",
  "pre-commit>=4.3.0,<5.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:slowapi.extension",
  "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
files = ["src", "tests"]
plugins = ["sqlalchemy.ext.mypy.plugin"]
